@@ -1,3 +1,8 @@
+2009-07-21  Chong Yidong  <cyd@stupidchicken.com>
+
+	* xdisp.c (move_it_to): For continued lines ending in a tab, take
+	the overflowed pixels into account (Bug#3879).
+
 2009-07-17  Kenichi Handa  <handa@m17n.org>
 
 	* casetab.c (shuffle): Fix the logic of setting up the cycle.
